--- a/app/globals.css
+++ b/app/globals.css
@@ -20,7 +20,6 @@
 }
 
 body {
-  background: var(--background);
-  color: var(--foreground);
+  background-color: #f1f1f1;
   font-family: Arial, Helvetica, sans-serif;
 }
